# meteorlake-power-ctl

./: .SRCINFO  .gitignore  LICENSE  Makefile  PKGBUILD  README.md  power-ctl  pyproject.toml
config/: 90-mtl-power-ctl.conf
