[project]
name = "mtl-power-ctl"
version = "0.1.0"
description = "Power profile manager for Intel Meteor Lake laptops"
authors = [{ name = "Pding", email = "pding@oaklight.cn" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.urls]
Repository = "https://github.com/oaklight/meteorlake-power-ctl"
Issues = "https://github.com/oaklight/meteorlake-power-ctl/issues"
